adding back anchor for all recipe page

--- a/recipes/dumpling.html
+++ b/recipes/dumpling.html
@@ -43,6 +43,8 @@
         <li>Lightly flour the dough pieces and roll out 1 piece into a thin circle roughly 4-inches (10 cm) in diameter.
         </li>
     </ol>
+
+    <div><a href="../index.html">Return to main page</a></div>
 </body>
 
 </html>
